library/src/libqstyleoption.h

typedef struct QStyleOption QStyleOption;
typedef struct QStyleOptionButton QStyleOptionButton;
typedef struct QStyleOptionDockWidget QStyleOptionDockWidget;
typedef struct QStyleOptionHeader QStyleOptionHeader;
typedef struct QStyleOptionHeaderV2 QStyleOptionHeaderV2;
typedef struct QStyleOptionMenuItem QStyleOptionMenuItem;
typedef struct QStyleOptionProgressBar QStyleOptionProgressBar;
typedef struct QStyleOptionTab QStyleOptionTab;
typedef struct QStyleOptionTabBarBase QStyleOptionTabBarBase;
typedef struct QStyleOptionTabWidgetFrame QStyleOptionTabWidgetFrame;
typedef struct QStyleOptionToolBar QStyleOptionToolBar;
typedef struct QStyleOptionToolBox QStyleOptionToolBox;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QWidget QWidget;
QTLIBC_API void QStyleOption_InitFrom(QStyleOption* self, QWidget* w);
QTLIBC_API void QStyleOption_OperatorAssign(QStyleOption* self, QStyleOption* other);
QTLIBC_API QStyleOptionTabWidgetFrame* QStyleOptionTabWidgetFrame_new();
QTLIBC_API QStyleOptionTabWidgetFrame* QStyleOptionTabWidgetFrame_new2(QStyleOptionTabWidgetFrame* other);
QTLIBC_API void QStyleOptionTabWidgetFrame_Delete(QStyleOptionTabWidgetFrame* self);
QTLIBC_API QStyleOptionTabBarBase* QStyleOptionTabBarBase_new();
QTLIBC_API QStyleOptionTabBarBase* QStyleOptionTabBarBase_new2(QStyleOptionTabBarBase* other);
QTLIBC_API void QStyleOptionTabBarBase_Delete(QStyleOptionTabBarBase* self);
QTLIBC_API QStyleOptionHeader* QStyleOptionHeader_new();
QTLIBC_API QStyleOptionHeader* QStyleOptionHeader_new2(QStyleOptionHeader* other);
QTLIBC_API void QStyleOptionHeader_Delete(QStyleOptionHeader* self);
QTLIBC_API QStyleOptionHeaderV2* QStyleOptionHeaderV2_new();
QTLIBC_API QStyleOptionHeaderV2* QStyleOptionHeaderV2_new2(QStyleOptionHeaderV2* other);
QTLIBC_API void QStyleOptionHeaderV2_Delete(QStyleOptionHeaderV2* self);
QTLIBC_API QStyleOptionButton* QStyleOptionButton_new();
QTLIBC_API QStyleOptionButton* QStyleOptionButton_new2(QStyleOptionButton* other);
QTLIBC_API void QStyleOptionButton_Delete(QStyleOptionButton* self);
QTLIBC_API QStyleOptionTab* QStyleOptionTab_new();
QTLIBC_API QStyleOptionTab* QStyleOptionTab_new2(QStyleOptionTab* other);
QTLIBC_API void QStyleOptionTab_Delete(QStyleOptionTab* self);
QTLIBC_API QStyleOptionToolBar* QStyleOptionToolBar_new();
QTLIBC_API QStyleOptionToolBar* QStyleOptionToolBar_new2(QStyleOptionToolBar* other);
QTLIBC_API void QStyleOptionToolBar_Delete(QStyleOptionToolBar* self);
QTLIBC_API QStyleOptionProgressBar* QStyleOptionProgressBar_new();
QTLIBC_API QStyleOptionProgressBar* QStyleOptionProgressBar_new2(QStyleOptionProgressBar* other);
QTLIBC_API void QStyleOptionProgressBar_Delete(QStyleOptionProgressBar* self);
QTLIBC_API QStyleOptionMenuItem* QStyleOptionMenuItem_new();
QTLIBC_API QStyleOptionMenuItem* QStyleOptionMenuItem_new2(QStyleOptionMenuItem* other);
QTLIBC_API void QStyleOptionMenuItem_Delete(QStyleOptionMenuItem* self);
QTLIBC_API QStyleOptionDockWidget* QStyleOptionDockWidget_new();
QTLIBC_API QStyleOptionDockWidget* QStyleOptionDockWidget_new2(QStyleOptionDockWidget* other);
QTLIBC_API void QStyleOptionDockWidget_Delete(QStyleOptionDockWidget* self);
QTLIBC_API QStyleOptionViewItem* QStyleOptionViewItem_new();
QTLIBC_API QStyleOptionViewItem* QStyleOptionViewItem_new2(QStyleOptionViewItem* other);
QTLIBC_API void QStyleOptionViewItem_Delete(QStyleOptionViewItem* self);
QTLIBC_API QStyleOptionToolBox* QStyleOptionToolBox_new();
QTLIBC_API QStyleOptionToolBox* QStyleOptionToolBox_new2(QStyleOptionToolBox* other);
QTLIBC_API void QStyleOptionToolBox_Delete(QStyleOptionToolBox* self);