src/qt/libqstyleoption.bf

	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionTabWidgetFrame_new")]
	public static extern void* QStyleOptionTabWidgetFrame_new();
	[LinkName("QStyleOptionTabWidgetFrame_new2")]
	public static extern void* QStyleOptionTabWidgetFrame_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionTabWidgetFrame_Delete")]
	public static extern void QStyleOptionTabWidgetFrame_Delete(void* self);
}
public interface IQStyleOptionTabBarBase
{
	void* NativePtr { get; }
}
public class QStyleOptionTabBarBase : IQStyleOptionTabBarBase, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionTabBarBase_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionTabBarBase_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionTabBarBase_new")]
	public static extern void* QStyleOptionTabBarBase_new();
	[LinkName("QStyleOptionTabBarBase_new2")]
	public static extern void* QStyleOptionTabBarBase_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionTabBarBase_Delete")]
	public static extern void QStyleOptionTabBarBase_Delete(void* self);
}
public interface IQStyleOptionHeader
{
	void* NativePtr { get; }
}
public class QStyleOptionHeader : IQStyleOptionHeader, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionHeader_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionHeader_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionHeader_new")]
	public static extern void* QStyleOptionHeader_new();
	[LinkName("QStyleOptionHeader_new2")]
	public static extern void* QStyleOptionHeader_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionHeader_Delete")]
	public static extern void QStyleOptionHeader_Delete(void* self);
}
public interface IQStyleOptionHeaderV2
{
	void* NativePtr { get; }
}
public class QStyleOptionHeaderV2 : IQStyleOptionHeaderV2, IQStyleOptionHeader
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionHeaderV2_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionHeaderV2_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionHeaderV2_new")]
	public static extern void* QStyleOptionHeaderV2_new();
	[LinkName("QStyleOptionHeaderV2_new2")]
	public static extern void* QStyleOptionHeaderV2_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionHeaderV2_Delete")]
	public static extern void QStyleOptionHeaderV2_Delete(void* self);
}
public interface IQStyleOptionButton
{
	void* NativePtr { get; }
}
public class QStyleOptionButton : IQStyleOptionButton, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionButton_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionButton_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionButton_new")]
	public static extern void* QStyleOptionButton_new();
	[LinkName("QStyleOptionButton_new2")]
	public static extern void* QStyleOptionButton_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionButton_Delete")]
	public static extern void QStyleOptionButton_Delete(void* self);
}
public interface IQStyleOptionTab
{
	void* NativePtr { get; }
}
public class QStyleOptionTab : IQStyleOptionTab, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionTab_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionTab_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionTab_new")]
	public static extern void* QStyleOptionTab_new();
	[LinkName("QStyleOptionTab_new2")]
	public static extern void* QStyleOptionTab_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionTab_Delete")]
	public static extern void QStyleOptionTab_Delete(void* self);
}
public interface IQStyleOptionToolBar
{
	void* NativePtr { get; }
}
public class QStyleOptionToolBar : IQStyleOptionToolBar, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionToolBar_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionToolBar_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionToolBar_new")]
	public static extern void* QStyleOptionToolBar_new();
	[LinkName("QStyleOptionToolBar_new2")]
	public static extern void* QStyleOptionToolBar_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionToolBar_Delete")]
	public static extern void QStyleOptionToolBar_Delete(void* self);
}
public interface IQStyleOptionProgressBar
{
	void* NativePtr { get; }
}
public class QStyleOptionProgressBar : IQStyleOptionProgressBar, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionProgressBar_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionProgressBar_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionProgressBar_new")]
	public static extern void* QStyleOptionProgressBar_new();
	[LinkName("QStyleOptionProgressBar_new2")]
	public static extern void* QStyleOptionProgressBar_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionProgressBar_Delete")]
	public static extern void QStyleOptionProgressBar_Delete(void* self);
}
public interface IQStyleOptionMenuItem
{
	void* NativePtr { get; }
}
public class QStyleOptionMenuItem : IQStyleOptionMenuItem, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionMenuItem_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionMenuItem_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionMenuItem_new")]
	public static extern void* QStyleOptionMenuItem_new();
	[LinkName("QStyleOptionMenuItem_new2")]
	public static extern void* QStyleOptionMenuItem_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionMenuItem_Delete")]
	public static extern void QStyleOptionMenuItem_Delete(void* self);
}
public interface IQStyleOptionDockWidget
{
	void* NativePtr { get; }
}
public class QStyleOptionDockWidget : IQStyleOptionDockWidget, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionDockWidget_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionDockWidget_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionDockWidget_new")]
	public static extern void* QStyleOptionDockWidget_new();
	[LinkName("QStyleOptionDockWidget_new2")]
	public static extern void* QStyleOptionDockWidget_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionDockWidget_Delete")]
	public static extern void QStyleOptionDockWidget_Delete(void* self);
}
public interface IQStyleOptionViewItem
{
	void* NativePtr { get; }
}
public class QStyleOptionViewItem : IQStyleOptionViewItem, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionViewItem_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionViewItem_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionViewItem_new")]
	public static extern void* QStyleOptionViewItem_new();
	[LinkName("QStyleOptionViewItem_new2")]
	public static extern void* QStyleOptionViewItem_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionViewItem_Delete")]
	public static extern void QStyleOptionViewItem_Delete(void* self);
}
public interface IQStyleOptionToolBox
{
	void* NativePtr { get; }
}
public class QStyleOptionToolBox : IQStyleOptionToolBox, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionToolBox_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionToolBox_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionToolBox_new")]
	public static extern void* QStyleOptionToolBox_new();
	[LinkName("QStyleOptionToolBox_new2")]
	public static extern void* QStyleOptionToolBox_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionToolBox_Delete")]
	public static extern void QStyleOptionToolBox_Delete(void* self);
}
